Sat Nov 18 20:19:59 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADShapeEnum.java: New class, to implement
	safe CAD type enumeration.

Fri Nov 17 22:36:52 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java
	  src/org/jcae/mesh/amibe/ds/Vertex2D.java: New Vertex2D class
	extending Vertex to handle meshes on parametrized surfaces.
	This will save some space for 3D meshes.
	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java: Replace Mesh.newVertex()
	by Vertex.valueOf(), to follow Java convention on naming static
	factory methods.
	* src/org/jcae/mesh/amibe/**.java: Above changes have to be
	propagated to almost all source files.

Wed Nov 15 12:13:10 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/java3d/Viewer.java: Add a key listener.

Mon Nov 13 10:40:18 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADShape.java
	  src-occ/org/jcae/mesh/cad/occ/OCCShape.java: Move CADShape.id member...
	* src/org/jcae/mesh/bora/ds/Mesh.java: ... here.
	* src-occ/org/jcae/mesh/cad/occ/OCCIterator.java
	  src-occ/org/jcae/mesh/cad/occ/OCCCompSolid.java
	  src/org/jcae/mesh/cad/CADIterator.java
	  src/org/jcae/mesh/cad/CADCompSolid.java: New CAD entities.
	* src/org/jcae/mesh/cad/CADShapeBuilder.java
	  src-occ/org/jcae/mesh/cad/occ/OCCShapeBuilder.java: New newIterator()
	method to iterate on direct children.
	* src/org/jcae/mesh/bora/xmldata/BModelReader.java
	  src/org/jcae/mesh/bora/xmldata/BModelWriter.java
	  src/org/jcae/mesh/bora/ds/BModel.java
	  src/org/jcae/mesh/bora/ds/BCADGraph.java
	  src/org/jcae/mesh/bora/ds/BCADGraphCell.java
	  src/org/jcae/mesh/bora/ds/BGroup.java: New classes.

Thu Nov  9 17:32:00 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/algo/Netgen.java
	  src/org/jcae/mesh/bora/algo/TeTgen.java: Add wrappers for Netgen
	and TetGen 3D meshers.
