@@ -1,3 +1,8 @@
+Tue Nov 21 13:06:24 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/VolMesh.java: Dummy data structure to
+	read/write volume meshes.
+
 Sat Nov 18 20:19:59 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/cad/CADShapeEnum.java: New class, to implement
